<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">초등 2학년 필수한자80</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="main_list_btn">LIST</string>
    <string name="main_start_btn">START</string>
    <string name="main_title">일본어 기초</string>
    <string name="main_sub">초등학교 2학년 필수한자 160</string>
    <string name="header_home">HOME</string>
    <string name="header_list">LIST</string>
    <string name="header_set">SET</string>

</resources>
