<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/lib/com.google.ads"
    android:id="@+id/main_bg"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <CheckedTextView
        android:id="@+id/checkedTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="149dp"
        android:textSize="20sp"
        android:text="@string/main_title" />

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/checkedTextView1"
        android:layout_marginTop="180dp" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" 
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <Button
                android:id="@+id/startBtn"
                android:layout_weight="1"
                android:text="@string/main_start_btn" />

            <Button
                android:id="@+id/listBtn"
                android:layout_weight="1"
                android:text="@string/main_list_btn" />
        </TableRow>
    </TableLayout>

    <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" 
            android:layout_marginTop="413dp">

        <com.google.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
            android:id="@+id/ad"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            app:adSize="BANNER"
            app:adUnitId="a1530ea42bc175b" >
        </com.google.ads.AdView>

    </TableRow>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkedTextView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="63dp"
        android:text="@string/main_sub"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>